# Image-compare

./: CMakeLists.txt  LICENSE  README.md  imagecompare.cpp  imgcompare.h  main.cpp  tests.cpp
test_files/: test_input
